// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<div>
  <div
    className="overlay"
    style={
      Object {
        "width": 0,
      }
    }
  >
    <div
      className="sidenav-container"
    >
      <div
        className="text-center"
      >
        <h2>
          Hop
           changelog
        </h2>
      </div>
      <a
        className="closebtn"
        onClick={[Function]}
      >
        ×
      </a>
      <div
        className="list-group"
      >
        <table
          className="table table-dark"
          style={
            Object {
              "width": "95%",
            }
          }
        >
          <thead>
            <tr>
              <td>
                Time and date
              </td>
              <td>
                Field
              </td>
              <td>
                Changed from
              </td>
              <td>
                To
              </td>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </div>
  <div
    className="card"
    style={
      Object {
        "width": "18rem",
      }
    }
  >
    <div
      className="card-header"
    >
      Hop Type
    </div>
    <div
      className="card-body"
    >
      <table
        className="table table-sm"
      >
        <tbody>
          <tr>
            <td>
              Name
            </td>
            <td>
              Cascade
            </td>
          </tr>
          <tr>
            <td>
              Country
            </td>
            <td>
              USA
            </td>
          </tr>
          <tr>
            <td>
              Format
            </td>
            <td>
              Pellets
            </td>
          </tr>
          <tr>
            <td>
              Manufacturer
            </td>
            <td>
              US Hop Co
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <form
    onSubmit={[MockFunction]}
    style={
      Object {
        "width": "18rem",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        htmlFor="grams"
      >
        grams
      </label>
      <div
        className="field"
      >
        <input
          className="form-control"
          name="grams"
          onChange={[MockFunction]}
          type="text"
          value="90"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="year"
      >
        year
      </label>
      <div
        className="field"
      >
        <input
          className="form-control"
          name="year"
          onChange={[MockFunction]}
          type="text"
          value="2017"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="alpha"
      >
        alpha
      </label>
      <div
        className="field"
      >
        <input
          className="form-control"
          name="alpha"
          onChange={[MockFunction]}
          type="text"
          value="3.7"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="comments"
      >
        comments
      </label>
      <div
        className="field"
      >
        <textarea
          className="form-control"
          name="comments"
          onChange={[MockFunction]}
          value=""
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="boughtDate"
      >
        boughtDate
      </label>
      <div
        className="field"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              className="form-control"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              type="text"
              value="29.05.2020"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="openedDate"
      >
        openedDate
      </label>
      <div
        className="field"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              className="form-control"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="hopType"
      >
        hopType
      </label>
      <div
        className="field"
      >
        <select
          className="form-control"
          name="hopType"
          onChange={[MockFunction]}
        >
          <option
            value=""
          >
            Cascade | Pellets
          </option>
          <option
            value="http://localhost:8080/hopTypes/10"
          >
            Cascade | Pellets
          </option>
          <option
            value="http://localhost:8080/hopTypes/11"
          >
            hallertau | Pellets
          </option>
        </select>
      </div>
    </div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Save
    </button>
  </form>
  <button
    className="btn btn-primary"
    onClick={[Function]}
  >
    Log
  </button>
</div>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<div>
  <div
    className="overlay"
    style={
      Object {
        "width": 0,
      }
    }
  >
    <div
      className="sidenav-container"
    >
      <div
        className="text-center"
      >
        <h2>
          Hop
           changelog
        </h2>
      </div>
      <a
        className="closebtn"
        onClick={[Function]}
      >
        ×
      </a>
      <div
        className="list-group"
      >
        <table
          className="table table-dark"
          style={
            Object {
              "width": "95%",
            }
          }
        >
          <thead>
            <tr>
              <td>
                Time and date
              </td>
              <td>
                Field
              </td>
              <td>
                Changed from
              </td>
              <td>
                To
              </td>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </div>
  <div
    className="card"
    style={
      Object {
        "width": "18rem",
      }
    }
  >
    <div
      className="card-header"
    >
      Hop Type
    </div>
    <div
      className="card-body"
    >
      <table
        className="table table-sm"
      >
        <tbody>
          <tr>
            <td>
              Name
            </td>
            <td>
              Cascade
            </td>
          </tr>
          <tr>
            <td>
              Country
            </td>
            <td>
              USA
            </td>
          </tr>
          <tr>
            <td>
              Format
            </td>
            <td>
              Pellets
            </td>
          </tr>
          <tr>
            <td>
              Manufacturer
            </td>
            <td>
              US Hop Co
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <form
    onSubmit={[MockFunction]}
    style={
      Object {
        "width": "18rem",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        htmlFor="grams"
      >
        grams
      </label>
      <div
        className="field"
      >
        <input
          className="form-control"
          name="grams"
          onChange={[MockFunction]}
          type="text"
          value="90"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="year"
      >
        year
      </label>
      <div
        className="field"
      >
        <input
          className="form-control"
          name="year"
          onChange={[MockFunction]}
          type="text"
          value="2017"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="alpha"
      >
        alpha
      </label>
      <div
        className="field"
      >
        <input
          className="form-control"
          name="alpha"
          onChange={[MockFunction]}
          type="text"
          value="3.7"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="comments"
      >
        comments
      </label>
      <div
        className="field"
      >
        <textarea
          className="form-control"
          name="comments"
          onChange={[MockFunction]}
          value=""
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="boughtDate"
      >
        boughtDate
      </label>
      <div
        className="field"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              className="form-control"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              type="text"
              value="29.05.2020"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="openedDate"
      >
        openedDate
      </label>
      <div
        className="field"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              className="form-control"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="hopType"
      >
        hopType
      </label>
      <div
        className="field"
      >
        <select
          className="form-control"
          name="hopType"
          onChange={[MockFunction]}
        >
          <option
            value=""
          >
            Cascade | Pellets
          </option>
          <option
            value="http://localhost:8080/hopTypes/10"
          >
            Cascade | Pellets
          </option>
          <option
            value="http://localhost:8080/hopTypes/11"
          >
            hallertau | Pellets
          </option>
        </select>
      </div>
    </div>
    <button
      className="btn btn-primary"
      disabled={true}
      type="submit"
    >
      Saving...
    </button>
  </form>
  <button
    className="btn btn-primary"
    onClick={[Function]}
  >
    Log
  </button>
</div>
`;
